--- a/pom.xml
+++ b/pom.xml
@@ -126,10 +126,12 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
         <configuration>
-          <!-- TODO: update to version 3.0.0 and remove useSystemClassLoader
-               https://issues.folio.org/browse/FOLIO-1609
-               https://issues.apache.org/jira/browse/SUREFIRE-1588
-          -->
+          <excludes>
+            <exclude>**Test.class</exclude>
+          </excludes>
+          <includes>
+            <include>TestSuite.class</include>
+          </includes>
           <useSystemClassLoader>false</useSystemClassLoader>
         </configuration>
       </plugin>
