--- a/ramls/examples/quick_marc_json.sample
+++ b/ramls/examples/quick_marc_json.sample
@@ -12,9 +12,6 @@
     }, {
       "tag": "006",
       "content": {
-        "Type" : "Notated music",
-        "Code" : "c",
-        "Comp" : "ab",
         "Comp": "mu",
         "FMus": "a",
         "Part": " ",
@@ -27,14 +24,12 @@
     }, {
       "tag": "007",
       "content": {
-        "Resource" : "Notated Music",
-        "Code" : "q",
+        "Category" : "q",
         "SMD" : "u"
       }
     }, {
       "tag": "008",
       "content": {
-        "Content" : "Scores",
         "Type": "c",
         "BLvl": "m",
         "Entered": "830419",
