MODQM-11 - marc-json <-> ui-compatible-marc-json converter updating (#27)
* Both converters are updated to support 006, 007 control fields broken out by byte representation
* Unit tests are updated

--- a/ramls/examples/quick_marc_json.sample
+++ b/ramls/examples/quick_marc_json.sample
@@ -12,9 +12,6 @@
     }, {
       "tag": "006",
       "content": {
-        "Type" : "Notated music",
-        "Code" : "c",
-        "Comp" : "ab",
         "Comp": "mu",
         "FMus": "a",
         "Part": " ",
@@ -27,8 +24,7 @@
     }, {
       "tag": "007",
       "content": {
-        "Resource" : "Notated Music",
-        "Code" : "q",
+        "Category" : "q",
         "SMD" : "u"
       }
     }, {
