--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-quick-marc</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -459,7 +459,7 @@
     <url>https://github.com/folio-org/mod-quick-marc</url>
     <connection>scm:git:git://github.com/folio-org/mod-quick-marc</connection>
     <developerConnection>scm:git:git@github.com:folio-org/mod-quick-marc.git</developerConnection>
-    <tag>v1.0.0</tag>
+    <tag>v1.0.1</tag>
   </scm>
 
   <repositories>
