--- a/ramls/examples/quick_marc_json.sample
+++ b/ramls/examples/quick_marc_json.sample
@@ -187,6 +187,6 @@
   ],
   "updateInfo": {
     "recordState": "ACTUAL",
-    "updatedDate": "2020-07-14T12:20:10.000"
+    "updateDate": "2020-07-14T12:20:10.000"
   }
 }
