--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
   </licenses>
 
   <properties>
-    <raml-module-builder.version>30.2.7</raml-module-builder.version>
+    <raml-module-builder.version>31.0.2</raml-module-builder.version>
     <jsonschema_paths>schemas</jsonschema_paths>
-    <vertx.version>3.9.0</vertx.version>
+    <vertx.version>3.9.2</vertx.version>
     <junit.jupiter.version>5.6.0</junit.jupiter.version>
     <rest-assured.version>4.3.0</rest-assured.version>
     <log4j-slf4j-impl.version>2.13.1</log4j-slf4j-impl.version>
@@ -124,8 +124,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <release>11</release>
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
@@ -268,9 +267,9 @@
       </plugin>
 
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>com.nickwongdev</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
-        <version>1.11</version>
+        <version>1.12.6</version>
         <configuration>
           <verbose>true</verbose>
           <complianceLevel>1.8</complianceLevel>
@@ -299,12 +298,12 @@
           <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.9.4</version>
+            <version>1.9.5</version>
           </dependency>
           <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjtools</artifactId>
-            <version>1.9.4</version>
+            <version>1.9.5</version>
           </dependency>
         </dependencies>
       </plugin>
