MODQM-47 - Bug with subfield and spaces when editing in quickMARC

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <marc4j.version>2.9.1</marc4j.version>
     <wiremock.version>2.26.3</wiremock.version>
     <maven.compiler.release>8</maven.compiler.release>
+    <jsonpath.version>2.4.0</jsonpath.version>
   </properties>
 
   <dependencies>
@@ -105,6 +106,11 @@
       <artifactId>wiremock-jre8-standalone</artifactId>
       <version>${wiremock.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path-assert</artifactId>
+      <version>${jsonpath.version}</version>
     </dependency>
   </dependencies>
 
