--- a/pom.xml
+++ b/pom.xml
@@ -328,7 +328,7 @@
               <generateApiTests>true</generateApiTests>
               <generateApiDocumentation>true</generateApiDocumentation>
               <generateModels>true</generateModels>
-              <modelsToGenerate>error,errors,parameter,quickMarcJson</modelsToGenerate>
+              <modelsToGenerate>error,errors,parameter,quickMarc,quickMarc_fields,quickMarc_updateInfo</modelsToGenerate>
               <generateModelTests>false</generateModelTests>
               <generateSupportingFiles>true</generateSupportingFiles>
               <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
