--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 spring.liquibase.enabled=false
 
 folio.tenant.validation.enabled=true
+
+feign.client.config.change-manager.logger-level=full
