--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 server.port=8081
 spring.application.name=mod-quick-marc
-
-management.endpoints.web.exposure.include=info,health,env,httptrace
-
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration, org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
-
-spring.liquibase.enabled=false
-
 folio.tenant.validation.enabled=true
 
+# to be set externally
+#spring.datasource.username=folio_admin
+#spring.datasource.password=folio_admin
+#spring.datasource.url=jdbc:postgresql://localhost:54321/okapi_modules
+
+spring.liquibase.enabled=true
+spring.liquibase.changeLog=classpath:db/changelog/changelog-master.xml
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
 feign.client.config.change-manager.logger-level=full
+management.endpoints.web.exposure.include=info,health,env,httptrace
