MODQM-77 - Support stub endpoint duplicate a MARC bibliographic record
* introduced new endpoint POST /records-editor/records in ModuleDescriptor, raml and yaml files
* added stub implementation with Response status 501 - NOT_IMPLEMENTED
* added test
* updated README file

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
   <properties>
     <java.version>11</java.version>
-    <folio-spring-base.version>1.0.1-SNAPSHOT</folio-spring-base.version>
+    <folio-spring-base.version>1.0.1</folio-spring-base.version>
     <openapi-generator.version>4.3.1</openapi-generator.version>
     <json.version>20200518</json.version>
     <junit-extensions.version>2.4.0</junit-extensions.version>
