--- a/src/main/resources/swagger.api/records-editor.yaml
+++ b/src/main/resources/swagger.api/records-editor.yaml
@@ -99,12 +99,58 @@ paths:
         schema:
           "$ref": "#/components/schemas/UUID"
         description: The UUID of a record
+  /records/status:
+    get:
+      responses:
+        '200':
+          description: Status of MARC bibliographic record creation successfully retrieved
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/creationStatus"
+        '400':
+          description: Bad request, e.g. malformed request body or query parameter.
+            Details of the error (e.g. name of the parameter or line/character number
+            with malformed data) provided in the response.
+          content:
+            application/json:
+              example:
+                $ref: "#/components/examples/error"
+              schema:
+                $ref: "#/components/schemas/error"
+        '404':
+          description: MARC record with a given ID not found
+          content:
+            application/json:
+              example:
+                $ref: "#/components/examples/error"
+              schema:
+                $ref: "#/components/schemas/error"
+        '500':
+          description: Internal server error, e.g. due to misconfiguration
+          content:
+            application/json:
+              example:
+                $ref: "#/components/examples/error"
+              schema:
+                $ref: "#/components/schemas/error"
+      description: Get status of MARC bibliographic record creation
+      operationId: getRecordCreationStatus
+      parameters:
+        - name: qmRecordId
+          in: query
+          required: true
+          description: UUID of ParsedRecord to be created
+          schema:
+            $ref: "#/components/schemas/UUID"
 components:
   schemas:
     quickMarc:
       $ref: schemas/quickMarcJson.json
+    creationStatus:
+      $ref: schemas/creationStatus.json
     error:
-      $ref: schemas/error.json
+      type: object
     UUID:
       type: string
       format: uuid
